Implemented Strategy Design Pattern for calculation of prediction and also refined the dark/light theme toggling.